# autocensus

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  changelog.md  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.cfg  setup.py
autocensus/: __init__.py  api.py  constants.py  errors.py  geography.py  query.py  socrata.py  topics.py  utilities.py
autocensus/resources/: annotations.csv  columns.csv  gazetteer_codes.csv  geo_codes.csv  geo_ids.csv  names.csv
tests/: conftest.py  ruff.toml  test_autocensus.py  test_geography.py
tests/end_to_end/: conftest.py  test_end_to_end.py
tests/end_to_end/fixtures/: counties_points.csv
tests/integration/: conftest.py  test_integration.py
tests/integration/fixtures/: counties.csv  counties_annotations.csv  counties_polygons.csv
tests/unit/: test_api.py  test_geography.py  test_socrata.py  test_utilities.py
