[tool.poetry]
name = "autocensus"
version = "2.1.3"
description = "A tool for collecting ACS and geospatial data from the Census API"
license = "MIT"
authors = ["Christopher Setzer <cmsetzer.github@gmail.com>"]
readme = "readme.md"
homepage = "https://github.com/socrata/autocensus"
keywords = ["census", "acs", "api", "data"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
geopandas = "0.13.2"
httpx = "^0.26.0"
nest-asyncio = "^1.6.0"
pandas = "2.0.3"
platformdirs = "^4.2.0"
pyogrio = "^0.7.2"
shapely = "^2.0.2"
socrata-py = "^1.1.13"
tenacity = "^8.2.3"
typing-extensions = "^4.9.0"
us = "^3.1.1"
yarl = "^1.9.4"

[tool.poetry.group.dev.dependencies]
pyinstrument = "^4.6.2"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.15"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
testpaths = "tests/unit"
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]

[tool.ruff]
line-length = 99
select = ["C90", "D", "E", "F", "I", "PD", "RUF"]
ignore = ["D105", "D107", "D203", "D213", "RUF001"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.isort]
force-sort-within-sections = true

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
