[tool.poetry]
name = "autocensus"
version = "2.2.0"
description = "A tool for collecting ACS and geospatial data from the Census API"
license = "MIT"
authors = ["Christopher Setzer <cmsetzer.github@gmail.com>"]
readme = "readme.md"
homepage = "https://github.com/cmsetzer/autocensus"
keywords = ["census", "acs", "api", "data"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
geopandas = "1.0.0"
httpx = "^0.27.0"
nest-asyncio = "^1.6.0"
pandas = "2.2.2"
platformdirs = "^4.2.2"
pyogrio = "^0.9.0"
shapely = "^2.0.5"
tenacity = "^9.0.0"
typing-extensions = "^4.12.2"
us = "^3.2.0"
yarl = "^1.9.4"

[tool.poetry.group.dev.dependencies]
pyinstrument = "^4.7.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.6"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
testpaths = "tests/unit"
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["C90", "D", "E", "F", "I", "PD", "RUF"]
ignore = ["D105", "D107", "D203", "D213", "RUF001"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
